--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,14 @@
 }
 
 body{
-    background: lightblue;
+    background: rgb(70, 70, 70);
 }
 
 .card{
-    width: 50%;
+    width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg, #edfe00, #5b548a);
+    max-height: 600px;
+    background: linear-gradient(135deg, #ebf0a0, #897ecb);
     color: #fff;
     margin: 100px auto 0;
     border-radius: 20px;
@@ -28,10 +29,63 @@ body{
 }
 
 .search input{
-    border-radius: 15px;
-    font-size: 20px;
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    color: #555;
+    padding: 10px 25px;
+    height: 60px;
+    border-radius: 30px;
+    flex: 1;
+    margin-right: 16px;
+    font-size: 18px;
 }
 
-img {
-    width: 30px;
+.search button {
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+}
+
+weather-icon{
+    width: 130px;
+    margin-top: 30px;
+}
+
+.weather h1{
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.weather h2{
+    font-size: 30px;
+    font-weight: 300;
+    margin-top: -10px;
+}
+
+.details{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+    margin-top: 30px;
+}
+.col{
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.col img{
+    width: 80px;
+    margin-right: 10px;
+}
+
+.humidity, .wind{
+    font-size: 20px;
+    margin-top: 0px;
 }
