--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background: rgb(70, 70, 70);
+    background: rgb(208, 208, 208);
 }
 
 .card{
@@ -15,10 +15,11 @@ body{
     max-height: 600px;
     background: linear-gradient(135deg, #ebf0a0, #897ecb);
     color: #fff;
-    margin: 100px auto 0;
+    margin: 30px auto 30px;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
+    box-shadow: 10px 10px 60px black;
 }
 
 .search {
@@ -39,6 +40,7 @@ body{
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
+    box-shadow: 1px 1px 200px black;
 }
 
 .search button {
@@ -46,9 +48,12 @@ body{
     outline: 0;
     background: #ebfffc;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
+    box-shadow: 1px 1px 200px black;
+    text-transform: uppercase;
+    font-size: 10px;
 }
 
 weather-icon{
